fixed horizontal scrolling issue and centered menu

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -70,7 +70,9 @@ a{
   text-align: center;
   margin: 0 0 60px;
 }
-
+.no-padding{
+  padding:0!important;
+}
 
 
 
