--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,7 +2,11 @@
  * Navigation
 /* ---------------------------------------------- */
 
+.leftMenu{
 
+  margin-left:5%
+
+}
 .ng-pageslide{
   z-index: 9999!important;
 }
@@ -26,7 +30,7 @@
 }
 
 .navbar-brand{
-  margin: 0 0 0 8%!important;
+  margin: 0 0 0 10%!important;
 }
 
 .navbar-custom,
